# Meeting-Summarizer

./: .gitignore  AUDIO_SETUP_GUIDE.md  BACKEND_API_SPEC.md  HOW_TO_SEE_IT_WORKING.md  LICENSE  README.md  package-lock.json
Frontend/: README.md  next.config.js  (+3 more)
backend/: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_REPORT.txt  Makefile  PROJECT_SUMMARY.md  QUICK_START.md  README.md  TESTING_RESULTS.txt  TROUBLESHOOTING.md  WHAT_IT_DOES.md  api.py  config.py  conversation.txt  dev.sh  docker-compose.yml  inference.py  jobs.py  logger.py  main.py  processor.py  pyproject.toml  requirements-dev.txt  requirements.txt  restart_servers.sh  run_test_server.py  setup.sh  start.sh  summarize.py  test_cli.sh  transcription.py  verify.sh  voice_demo.py
backend/app/: main.py  notifications.py  setup_logging.py  test_server.py
backend/config/: settings.py
backend/db/: __init__.py  connection.py  migrate.py  repositories.py  sqlite_adapter.py
backend/db/migrations/: 001_initial_schema.sql
backend/examples/: curl_examples.sh  websocket_client.py
backend/frontend/: index.html  voice_meeting.html
backend/inference/: serve.py
backend/models/: __init__.py  schemas.py
backend/tests/: conftest.py  sample_data.py  test_api.py  test_inference.py  test_summarize.py
backend/tests/integration/: test_full_flow.py
backend/tests/unit/: test_chunker.py  test_merger.py
backend/utils/: api.py  config.py  inference.py  summarize.py  transcription.py
backend/workers/: __init__.py  chunker.py  merger.py  worker.py
(+13 files in other folders)
